--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "grpc-ts-middleware",
-	"version": "1.0.2",
+	"version": "1.0.3",
 	"description": "gRPC pre-call and post-call middleware",
 	"main": "src/index.js",
 	"scripts": {
@@ -24,16 +24,13 @@
 	},
 	"author": "Nicolas Pearson",
 	"license": "MIT",
-	"dependencies": {
-		"grpc": "~1.18.0"
-	},
 	"devDependencies": {
-		"@types/node": "~10.12.21",
-		"@types/protobufjs": "~6.0.0",
+		"@types/node": "~10.12.24",
+		"grpc": "~1.18.0",
 		"prettier": "~1.16.4",
 		"protobufjs": "~6.8.8",
 		"ts-node": "~8.0.2",
 		"tslint": "~5.12.1",
-		"typescript": "~3.3.1"
+		"typescript": "~3.3.3"
 	}
 }
