--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "grpc-ts-middleware",
-	"version": "1.0.7",
+	"version": "1.0.8",
 	"description": "gRPC pre-call and post-call middleware",
 	"main": "src/index.js",
 	"scripts": {
@@ -8,7 +8,9 @@
 		"build:ts": "tsc --rootDir ./src/",
 		"prettier": "prettier --write \"src/**/*.{ts,tsx,css}\"",
 		"tslint": "tslint --fix -c tslint.json -p tsconfig.json",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"ncu": "ncu",
+		"ncu:u": "ncu -u"
 	},
 	"keywords": [
 		"grpc",
@@ -25,12 +27,13 @@
 	"author": "Nicolas Pearson",
 	"license": "MIT",
 	"devDependencies": {
-		"@types/node": "~12.0.2",
-		"grpc": "~1.20.3",
-		"prettier": "~1.17.1",
+		"@types/node": "~12.7.1",
+		"grpc": "~1.22.2",
+		"npm-check-updates": "~3.1.21",
+		"prettier": "~1.18.2",
 		"protobufjs": "~6.8.8",
-		"ts-node": "~8.1.0",
-		"tslint": "~5.16.0",
-		"typescript": "~3.4.5"
+		"ts-node": "~8.3.0",
+		"tslint": "~5.18.0",
+		"typescript": "~3.5.3"
 	}
 }
