--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "grpc-ts-middleware",
-	"version": "1.0.10",
+	"version": "1.0.12",
 	"description": "gRPC pre-call and post-call middleware",
 	"main": "src/index.js",
 	"scripts": {
@@ -13,7 +13,7 @@
 		"ncu:u": "ncu -u"
 	},
 	"keywords": [
-		"grpc",
+		"grpc-js",
 		"nodejs",
 		"middleware",
 		"tracing",
@@ -27,13 +27,13 @@
 	"author": "Nicolas Pearson",
 	"license": "MIT",
 	"devDependencies": {
-		"@types/node": "~13.7.7",
-		"grpc": "~1.24.2",
-		"npm-check-updates": "~4.0.2",
-		"prettier": "~1.19.1",
-		"protobufjs": "~6.8.8",
-		"ts-node": "~8.6.2",
-		"tslint": "~6.0.0",
-		"typescript": "~3.8.3"
+		"@grpc/grpc-js": "^1.4.5",
+		"@types/node": "^17.0.2",
+		"npm-check-updates": "~12.0.5",
+		"prettier": "~2.5.1",
+		"protobufjs": "^6.11.2",
+		"ts-node": "~10.4.0",
+		"tslint": "~6.1.3",
+		"typescript": "^4.5.4"
 	}
 }
